# mev-boost-relay-allowed-list

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ape-config.yaml  config.py  config_goerli.py  config_holesky.py  config_hoodi.py  config_mainnet.py  deployed_goerli.txt  deployed_holesky.txt  deployed_hoodi.txt  deployed_mainnet.txt  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  sample.env
.github/: dependabot.yml
.github/workflows/: tests.yml  tests.yml.disabled
contracts/: AllowedList.sol  MEVBoostRelayAllowedList.vy  MEVBoostRelayWhitelist.vy  Whitelist.sol
scripts/: deploy.py
tasks/: deploy.ts
test/: Whitelist.ts
tests/: config.py  conftest.py  test_ownership.py  test_recovery.py  test_relay_allowed_list.py  test_relay_whitelist.py
